messing with styling

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 <div
   class="container-fluid d-flex flex-column justify-content-center align-items-center"
-  style="height: 90vh"
+  style="height: 100vh"
 >
   <h1 class="text-center mt-5 welcome" style="margin-bottom: 5%">
     Welcome to PokePy!
@@ -31,7 +31,7 @@
             </div>
             <div class="row justify-content-between align-items-center">
               <div class="col">
-                <button type="submit" class="btn btn-primary">Sign up</button>
+                <button type="submit" class="btn btn-primary">Sign In!</button>
               </div>
             </div>
             <div class="row mt-3 flex-column">
