--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,41 +1,41 @@
-/*
- * Base structure
- */
-
-/* body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-} */
+@font-face {
+  font-family: "pressstart";
+  src: url("../PressStart2P.ttf") format("truetype");
+}
 
 body {
   margin: 0;
   padding: 0;
+  font-family: "pressstart";
+  background-image: url(../bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: stretch;
 }
 
 .welcome {
-  color: #ed1c24;
+  color: #ffcb05;
+  text-shadow: 2px 2px 2px #007bc3;
 }
 
 .btn {
-  background-color: #7e177d;
-  border-color: #a5a5a5;
+  background-color: #007bc3;
+  border-color: #4cb050;
 }
 
 .btn-primary {
-  background-color: #7e177d;
-  border-color: #a5a5a5;
+  background-color: #007bc3;
+  border-color: #ffcb05;
 }
 
 .btn-primary:hover {
-  background-color: #4cb050 !important;
-  border-color: #4cb050 !important;
+  background-color: #ffcb05 !important;
+  border-color: #ffcb05 !important;
 }
 
 .btn-primary:active {
   background-color: #4cb050 !important;
-  border-color: #4cb050 !important;
+  border-color: #ffcb05 !important;
 }
 
 .fade-in-text {
@@ -64,24 +64,24 @@ body {
     margin: 10px;
   }
   .form-control {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
   }
   h1 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
 
   a {
-    font-size: 0.8rem;
+    font-size: 0.5rem;
   }
   .btn-primary {
-    font-size: 1.2rem;
+    font-size: 0.7rem;
     padding: 10px 20px;
   }
   .btn-link {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
   }
   .btn {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     padding: 8px 16px;
   }
 }
