--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
       ></script>
     </div>
     <footer class="footer">
-        <a class="links" href="https://github.com/smbirch/pokepy" target="_blank">Created by Spencer Birch. Click here for to see my Github!</a>
+        <a class="links" href="https://github.com/smbirch/pokepy" target="_blank">Click here for to see my Github!</a>
       </footer>
       
   </body>
