--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,15 @@
   </head>
 
   <body>
-      <div>{% block content %} {% endblock %}</div>
+      <div>
+        {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+            {% for category, message in messages %}
+              <div class="alert alert-{{ category }}">{{ message }}</div>
+            {% endfor%}
+          {% endif %}
+        {% endwith %}
+        {% block content %} {% endblock %}</div>
 
       <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
