--- a/templates/index.html
+++ b/templates/index.html
@@ -14,40 +14,22 @@
     <div class="col-6">
       <div class="card">
         <div class="card-body text-center">
-          <form>
-            <div class="form-group">
-              <input
-                type="text"
-                class="form-control text-center mb-2"
-                placeholder="Username"
-              />
+          <div class="row mt-3 flex-column">
+            <div class="col mb-4">
+              <a href="{{ url_for("login")}}" class="btn btn-primary btn-lg btn-block"
+                >Sign In!</a
+              >
             </div>
-            <div class="form-group">
-              <input
-                type="password"
-                class="form-control text-center mb-2"
-                placeholder="Password"
-              />
+            <div class="col">
+              <a href="{{ url_for("register")}}" class="btn btn-primary btn-lg btn-block"
+                >Create An Account!</a
+              >
             </div>
-            <div class="row justify-content-between align-items-center">
-              <div class="col">
-                <button type="submit" class="btn btn-primary">Sign In!</button>
-              </div>
-            </div>
-            <div class="row mt-3 flex-column">
-              <div class="col">
-                <a href="#" class="text-muted mb-2 links"
-                  >Forgot your password?</a
-                >
-              </div>
-              <div class="col">
-                <a href="#" class="text-muted links">Create an account here!</a>
-              </div>
-            </div>
-          </form>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
 {% endblock %}
