--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     style="height: 50vh; width: 100vw"
   >
     <div class="col-6">
-      <div class="card">
+      <div class="card bg-transparent my-card">
         <div class="card-body text-center">
           <div class="row mt-3 flex-column">
             <div class="col mb-4">
