--- a/templates/login.html
+++ b/templates/login.html
@@ -12,8 +12,8 @@
     style="height: 50vh; width: 100vw"
   >
     <div class="col-6">
-      <div class="card">
-        <div class="card-body text-center">
+      <div class="card my-card">
+        <div class="card-body text-center my-card">
           <form method="POST" action="">
             <div class="form-group">
               {{ form.hidden_tag() }}
