--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
     style="height: 50vh; width: 100vw"
   >
     <div class="col-6">
-      <div class="card">
+      <div class="card my-card">
         <div class="card-body text-center">
           <form method="POST" action="">
             <div class="form-group">
