--- a/templates/userhome.html
+++ b/templates/userhome.html
@@ -1,59 +1,77 @@
 {% extends 'base.html' %} {% block content %}
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-12">
-      <h1 class="text-left text-muted" style="margin-top: 10px">Pokepy</h1>
-    </div>
-  </div>
-  <div class="row justify-content-center">
-    <div class="col-md-8">
-      <div class="border rounded p-3">
-        <h2 class="text-center">User's Dex</h2>
-        <div class="row">
-          <div class="col-md-6">
-            <h3 class="text-center">Current Team</h3>
-            <div class="row">
-              <div class="col-12 mb-3">
-                <div class="border rounded p-2">Box 1</div>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="border rounded p-2">Box 2</div>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="border rounded p-2">Box 3</div>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="border rounded p-2">Box 4</div>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="border rounded p-2">Box 5</div>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="border rounded p-2">Box 6</div>
+<div
+  class="container-fluid d-flex flex-column justify-content-center align-items-center"
+  style="height: 100vh"
+>
+  <a a href="{{url_for('userhome')}}"
+    ><h1
+      class="text-left text-muted links"
+      style="position: absolute; top: 0; left: 0; margin: 10px"
+    >
+      Pokepy
+    </h1></a
+  >
+  <a a href="{{url_for('index')}}"
+    ><h6
+      class="text-right text-muted links"
+      style="position: absolute; top: 0; right: 0; margin: 10px"
+    >
+      Logout
+    </h6></a
+  >
+
+  <div class="container-fluid">
+    <div class="row"></div>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <div class="border rounded p-3">
+          <h3 class="text-center">User's Dex</h3>
+          <div class="row">
+            <div class="col-md-6">
+              <h4 class="text-center">Current Team</h4>
+              <div class="row">
+                <div class="col-12 mb-3">
+                  <div class="border rounded p-2">Box 1</div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="border rounded p-2">Box 2</div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="border rounded p-2">Box 3</div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="border rounded p-2">Box 4</div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="border rounded p-2">Box 5</div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="border rounded p-2">Box 6</div>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-6">
-            <h3 class="text-center">Options</h3>
-            <div class="row">
-              <div class="col-12 mb-3">
-                <div class="border rounded p-2">Box 1</div>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="border rounded p-2">Box 2</div>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="border rounded p-2">Box 3</div>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="border rounded p-2">Box 4</div>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="border rounded p-2">Box 5</div>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="border rounded p-2">Box 6</div>
+            <div class="col-md-6">
+              <h4 class="text-center">Options</h4>
+              <div class="row">
+                <div class="col-12 mb-3">
+                  <div class="border rounded p-2">Box 1</div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="border rounded p-2">Box 2</div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="border rounded p-2">Box 3</div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="border rounded p-2">Box 4</div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="border rounded p-2">Box 5</div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="border rounded p-2">Box 6</div>
+                </div>
               </div>
             </div>
           </div>
@@ -61,5 +79,5 @@
       </div>
     </div>
   </div>
+  {% endblock %}
 </div>
-{% endblock %}
