--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,3 +111,11 @@ footer a {
   border: 0;
   background: transparent;
 }
+
+#flash-message {
+  transition: opacity 0.5s ease-in-out;
+}
+
+.fade {
+  opacity: 0;
+}
