--- a/templates/userhome.html
+++ b/templates/userhome.html
@@ -12,7 +12,7 @@
       Pokepy
     </h1></a
   >
-  <a a href="{{url_for('index')}}"
+  <a a href="{{url_for('logout')}}"
     ><h6
       class="text-right text-muted links"
       style="position: absolute; top: 0; right: 0; margin: 10px"
@@ -26,7 +26,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="border rounded p-3">
-          <h3 class="text-center">User's Dex</h3>
+          <h3 class="text-center">{{ userobject}}'s Dex</h3>
           <div class="row">
             <div class="col-md-6">
               <h4 class="text-center">Current Team</h4>
