--- a/static/css/style.css
+++ b/static/css/style.css
@@ -114,8 +114,21 @@ footer a {
 
 #flash-message {
   transition: opacity 0.5s ease-in-out;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
 }
 
 .fade {
   opacity: 0;
+}
+
+@media (min-width: 768px) {
+  #flash-message {
+    left: 50%;
+    transform: translateX(-50%);
+    width: 50%;
+  }
 }
