--- a/templates/userhome.html
+++ b/templates/userhome.html
@@ -26,28 +26,28 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="border rounded p-3">
-          <h3 class="text-center">{{ userobject}}'s Dex</h3>
+          <h3 class="text-center">{{ userobject.username}}'s Dex</h3>
           <div class="row">
             <div class="col-md-6">
               <h4 class="text-center">Current Team</h4>
               <div class="row">
                 <div class="col-12 mb-3">
-                  <div class="border rounded p-2">Box 1</div>
+                  <div class="border rounded p-2">{{ userteam.mon1 }}</div>
                 </div>
                 <div class="col-12 mb-3">
-                  <div class="border rounded p-2">Box 2</div>
+                  <div class="border rounded p-2">{{ userteam.mon2 }}</div>
                 </div>
                 <div class="col-12 mb-3">
-                  <div class="border rounded p-2">Box 3</div>
+                  <div class="border rounded p-2">{{ userteam.mon3 }}</div>
                 </div>
                 <div class="col-12 mb-3">
-                  <div class="border rounded p-2">Box 4</div>
+                  <div class="border rounded p-2">{{ userteam.mon4 }}</div>
                 </div>
                 <div class="col-12 mb-3">
-                  <div class="border rounded p-2">Box 5</div>
+                  <div class="border rounded p-2">{{ userteam.mon5 }}</div>
                 </div>
                 <div class="col-12 mb-3">
-                  <div class="border rounded p-2">Box 6</div>
+                  <div class="border rounded p-2">{{ userteam.mon6 }}</div>
                 </div>
               </div>
             </div>
