--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -36,7 +34,7 @@
       ></script>
     </div>
     <footer class="footer">
-        <a class="links" href="https://github.com/smbirch/pokepy" target="_blank">Click here for to see my GitHub!</a>
+        <a class="links" href="https://github.com/smbirch/" target="_blank">Click here for to see my GitHub!</a>
       </footer>
       
   </body>
@@ -48,7 +46,7 @@
     if (message) {
       setTimeout(function() {
         message.classList.add('fade');
-      }, 3000); // time in milliseconds
+      }, 3000); 
     }
   });
   </script>
