Starting "See one pokemon" workflow: created pages for get mon and see mon info created func for monobject session data

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
       ></script>
     </div>
     <footer class="footer">
-        <a class="links" href="https://github.com/smbirch/" target="_blank">Click here for to see my GitHub!</a>
+        <a class="links" href="https://github.com/smbirch/" target="_blank">Click here to see my GitHub!</a>
       </footer>
       
   </body>
