--- a/templates/mon_info.html
+++ b/templates/mon_info.html
@@ -6,7 +6,7 @@
 >
   <a a href="{{url_for('userhome')}}"
     ><h1
-      class="text-left text-muted links controlLinks"
+      class="text-left text-muted links controlLinks colors"
       style="position: absolute; top: 0; left: 0; margin: 10px"
     >
       Pokepy
@@ -14,17 +14,17 @@
   >
   <a a href="{{url_for('logout')}}"
     ><h6
-      class="text-right text-muted links controlLinks"
+      class="text-right text-muted links controlLinks colors"
       style="position: absolute; top: 0; right: 0; margin: 10px"
     >
       Logout
     </h6></a
   >
 
-  <h1 class="text-center mt-5 welcome">{{ mondata.monname.title() }}</h1>
+  <h1 class="text-center welcome">{{ mondata.monname.title() }}</h1>
   <div
     class="row justify-content-center align-items-center"
-    style="height: 50vh; width: 80vw"
+    style="width: 80vw"
   >
     <div class="col-6" style="width: 50%">
       <img
@@ -32,11 +32,8 @@
         alt="Sprite"
         style="width: 100%; height: auto"
       />
-
-      <!-- First flexbox content here -->
     </div>
     <div class="col-6" style="width: 50%">
-      <!-- Second flexbox content here -->
       <p>ID: {{ mondata.monid }}</p>
       <p>Height: {{ mondata.height }}</p>
       <p>Weight: {{ mondata.weight }}</p>
@@ -45,6 +42,11 @@
     <div class="d-flex justify-content-center align-items-center">
       <a href="{{ url_for('get_mon')}}" class="btn btn-primary"
         >Check out another Pokemon!</a
+      >
+    </div>
+    <div class="d-flex justify-content-center align-items-center">
+      <a href="{{ url_for('userhome')}}" class="btn btn-primary mt-2"
+        >Go Home</a
       >
     </div>
   </div>
