--- a/templates/get_mon.html
+++ b/templates/get_mon.html
@@ -49,6 +49,13 @@
                       {{ form.submit(class="btn btn-primary")}}
                     </div>
                   </div>
+                  <div class="d-flex justify-content-center align-items-center">
+                    <a
+                      href="{{ url_for('userhome')}}"
+                      class="btn btn-primary mt-2"
+                      >Go Home</a
+                    >
+                  </div>
                 </fieldset>
               </div>
             </form>
