--- a/templates/userhome.html
+++ b/templates/userhome.html
@@ -26,7 +26,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="border rounded p-3 usercard">
-          <h3 class="text-center">{{ username }}'s Dex</h3>
+          <h3 class="text-center">{{ username.title() }}'s Dex</h3>
           <div class="row">
             <div class="col-md-6">
               <h4 class="text-center">Current Team</h4>
@@ -148,7 +148,7 @@
                       type="submit"
                       class="border rounded p-2 userhome-btn"
                     >
-                      See all Pokemon
+                      See all Pokemon*
                     </button>
                   </form>
                 </div>
@@ -158,7 +158,7 @@
                       type="submit"
                       class="border rounded p-2 userhome-btn"
                     >
-                      Edit your team
+                      Edit your team*
                     </button>
                   </form>
                 </div>
