added "all_mons" page and logic plus some buttons to link to it on other pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,10 @@ body {
   width: 85%;
 }
 
+.allmons-btn {
+  width: 100%;
+}
+
 .fade-in-text {
   animation: fadeIn 5s;
   pointer-events: auto;
@@ -158,4 +162,38 @@ footer a {
     transform: translateX(-50%);
     width: 50%;
   }
+}
+
+.scroll-container {
+  max-height: 200px;
+  overflow-y: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.list-inline-item {
+  flex: 0 0 25%;
+  max-width: 25%;
+  padding: 5px;
+  text-align: center;
+}
+
+.scroll-container {
+  max-height: 70vh;
+  overflow-y: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.list-inline-item {
+  flex: 0 0 25%;
+  max-width: 25%;
+  padding: 5px;
+  text-align: center;
+  margin: 0.25rem;
+  margin-right: 0.25rem;
 }
