--- a/templates/userhome.html
+++ b/templates/userhome.html
@@ -43,7 +43,7 @@
                       type="submit"
                       class="border rounded p-2 userhome-btn"
                     >
-                      {{ teamobject.mon1 }}
+                      {{ teamobject.mon1.title() }}
                     </button>
                   </form>
                 </div>
@@ -59,7 +59,7 @@
                       type="submit"
                       class="border rounded p-2 userhome-btn"
                     >
-                      {{ teamobject.mon2 }}
+                      {{ teamobject.mon2.title() }}
                     </button>
                   </form>
                 </div>
@@ -75,7 +75,7 @@
                       type="submit"
                       class="border rounded p-2 userhome-btn"
                     >
-                      {{ teamobject.mon3 }}
+                      {{ teamobject.mon3.title() }}
                     </button>
                   </form>
                 </div>
@@ -91,7 +91,7 @@
                       type="submit"
                       class="border rounded p-2 userhome-btn"
                     >
-                      {{ teamobject.mon4 }}
+                      {{ teamobject.mon4.title() }}
                     </button>
                   </form>
                 </div>
@@ -107,7 +107,7 @@
                       type="submit"
                       class="border rounded p-2 userhome-btn"
                     >
-                      {{ teamobject.mon5 }}
+                      {{ teamobject.mon5.title() }}
                     </button>
                   </form>
                 </div>
@@ -123,7 +123,7 @@
                       type="submit"
                       class="border rounded p-2 userhome-btn"
                     >
-                      {{ teamobject.mon6 }}
+                      {{ teamobject.mon6.title() }}
                     </button>
                   </form>
                 </div>
@@ -143,12 +143,12 @@
                   </form>
                 </div>
                 <div class="col-12 mb-3">
-                  <form method="GET" action="{{ url_for('userhome') }}">
+                  <form method="GET" action="{{ url_for('all_mons') }}">
                     <button
                       type="submit"
                       class="border rounded p-2 userhome-btn"
                     >
-                      See all Pokemon*
+                      See all Pokemon
                     </button>
                   </form>
                 </div>
