--- a/templates/mon_info.html
+++ b/templates/mon_info.html
@@ -41,12 +41,13 @@
     </div>
     <div class="d-flex justify-content-center align-items-center">
       <a href="{{ url_for('get_mon')}}" class="btn btn-primary"
-        >Check out another Pokemon!</a
+        >Search for another Pokemon!</a
       >
     </div>
     <div class="d-flex justify-content-center align-items-center">
-      <a href="{{ url_for('userhome')}}" class="btn btn-primary mt-2"
-        >Go Home</a
+      <a href="{{ url_for('userhome')}}" class="btn btn-primary m-2">Go Home</a>
+      <a href="{{ url_for('all_mons')}}" class="btn btn-primary m-2"
+        >See all Pokemon</a
       >
     </div>
   </div>
