--- a/templates/edit_team.html
+++ b/templates/edit_team.html
@@ -26,26 +26,21 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="border rounded p-3 usercard">
-          <h3 class="text-center">{{ username.title() }}'s Dex</h3>
+          <h3 class="text-center">Edit Your Team</h3>
           <div class="row">
             <div class="col-md-6">
               <h4 class="text-center">Current Team</h4>
               <div class="row">
                 <div class="col-12 mb-3">
-                  <form method="POST" action="{{ url_for('get_mon') }}">
-                    {{ form.hidden_tag() }}
-                    <input
-                      type="hidden"
-                      name="monname"
-                      value="{{ teamobject.mon1 }}"
-                    />
-                    <button
-                      type="submit"
-                      class="border rounded p-2 userhome-btn"
-                    >
-                      {{ teamobject.mon1.title() }}
-                    </button>
-                  </form>
+                  <button
+                    type="button"
+                    class="border rounded p-2 userhome-btn"
+                    data-toggle="modal"
+                    data-target="#getMonModal"
+                    data-remote="{{ url_for('get_mon', monname=teamobject.mon1) }}"
+                  >
+                    {{ teamobject.mon1.title() }}
+                  </button>
                 </div>
                 <div class="col-12 mb-3">
                   <form method="POST" action="{{ url_for('get_mon') }}">
