--- a/templates/edit_team.html
+++ b/templates/edit_team.html
@@ -39,10 +39,8 @@
                       name="monname"
                       value="{{ teamobject.mon1 }}"
                     />
-                    <button
-                      type="submit"
-                      class="border rounded p-2 userhome-btn"
-                    >
+                    <input type="hidden" name="pokemon_pos" value="0" />
+                    <button type="submit" class="border rounded p-2 pokebutton">
                       {{ teamobject.mon1.title() }}
                     </button>
                   </form>
@@ -55,10 +53,8 @@
                       name="monname"
                       value="{{ teamobject.mon2 }}"
                     />
-                    <button
-                      type="submit"
-                      class="border rounded p-2 userhome-btn"
-                    >
+                    <input type="hidden" name="pokemon_pos" value="1" />
+                    <button type="submit" class="border rounded p-2 pokebutton">
                       {{ teamobject.mon2.title() }}
                     </button>
                   </form>
@@ -71,10 +67,8 @@
                       name="monname"
                       value="{{ teamobject.mon3 }}"
                     />
-                    <button
-                      type="submit"
-                      class="border rounded p-2 userhome-btn"
-                    >
+                    <input type="hidden" name="pokemon_pos" value="2" />
+                    <button type="submit" class="border rounded p-2 pokebutton">
                       {{ teamobject.mon3.title() }}
                     </button>
                   </form>
@@ -87,10 +81,8 @@
                       name="monname"
                       value="{{ teamobject.mon4 }}"
                     />
-                    <button
-                      type="submit"
-                      class="border rounded p-2 userhome-btn"
-                    >
+                    <input type="hidden" name="pokemon_pos" value="3" />
+                    <button type="submit" class="border rounded p-2 pokebutton">
                       {{ teamobject.mon4.title() }}
                     </button>
                   </form>
@@ -103,10 +95,8 @@
                       name="monname"
                       value="{{ teamobject.mon5 }}"
                     />
-                    <button
-                      type="submit"
-                      class="border rounded p-2 userhome-btn"
-                    >
+                    <input type="hidden" name="pokemon_pos" value="4" />
+                    <button type="submit" class="border rounded p-2 pokebutton">
                       {{ teamobject.mon5.title() }}
                     </button>
                   </form>
@@ -119,10 +109,8 @@
                       name="monname"
                       value="{{ teamobject.mon6 }}"
                     />
-                    <button
-                      type="submit"
-                      class="border rounded p-2 userhome-btn"
-                    >
+                    <input type="hidden" name="pokemon_pos" value="5" />
+                    <button type="submit" class="border rounded p-2 pokebutton">
                       {{ teamobject.mon6.title() }}
                     </button>
                   </form>
@@ -132,16 +120,6 @@
             <div class="col-md-6">
               <h4 class="text-center">Options</h4>
               <div class="row">
-                <div class="col-12 mb-3">
-                  <form method="GET" action="{{ url_for('get_mon') }}">
-                    <button
-                      type="submit"
-                      class="border rounded p-2 userhome-btn"
-                    >
-                      See one Pokemon
-                    </button>
-                  </form>
-                </div>
                 <div class="col-12 mb-3">
                   <form method="GET" action="{{ url_for('all_mons') }}">
                     <button
@@ -153,14 +131,23 @@
                   </form>
                 </div>
                 <div class="col-12 mb-3">
-                  <form method="GET" action="{{ url_for('edit_team') }}">
+                  <form method="GET" action="{{ url_for('get_mon') }}">
                     <button
                       type="submit"
                       class="border rounded p-2 userhome-btn"
                     >
-                      Edit your team
+                      See one Pokemon
                     </button>
                   </form>
+                </div>
+                <div class="col-12 mb-3">
+                  <button
+                    type="button"
+                    class="border rounded p-2 pokebutton"
+                    id="remove-pokemon-button"
+                  >
+                    Remove a Pokemon*
+                  </button>
                 </div>
                 <div class="col-12 mb-3">
                   <form method="POST" action="{{ url_for('random_team') }}">
@@ -200,4 +187,51 @@
     </div>
   </div>
 </div>
+<script>
+  // Store the clicked Pokemon's identifier
+  let selectedPokemonId = null;
+
+  function removePokemon() {
+    if (selectedPokemonId) {
+      const form = document.createElement('form');
+      form.method = 'POST';
+      form.action = '{{ url_for('remove_pokemon') }}';
+
+      const csrfToken = document.getElementsByName('csrf_token')[0].value;
+      const csrfInput = document.createElement('input');
+      csrfInput.type = 'hidden';
+      csrfInput.name = 'csrf_token';
+      csrfInput.value = csrfToken;
+
+      const pokemonIdInput = document.createElement('input');
+      pokemonIdInput.type = 'hidden';
+      pokemonIdInput.name = 'pokemon_pos';
+      pokemonIdInput.value = selectedPokemonId;
+
+      form.appendChild(csrfInput);
+      form.appendChild(pokemonIdInput);
+
+      document.body.appendChild(form);
+      form.submit();
+    }
+  }
+
+  // Event listener for Pokemon buttons
+  const pokemonButtons = document.querySelectorAll('button.pokebutton');
+  pokemonButtons.forEach((button) => {
+    button.addEventListener('click', (event) => {
+      event.preventDefault();
+      selectedPokemonId = button.previousElementSibling.value;
+      button.classList.toggle('colors');
+    });
+  });
+
+  // Event listener for Remove Pokemon button
+  const removePokemonButton = document.querySelector('#remove-pokemon-button');
+  removePokemonButton.addEventListener('click', (event) => {
+    event.preventDefault();
+    removePokemon();
+  });
+</script>
+
 {% endblock %}
