updated some redirects

--- a/templates/mon_info.html
+++ b/templates/mon_info.html
@@ -45,6 +45,8 @@
       >
     </div>
     <div class="d-flex justify-content-center align-items-center">
+      <a href="{{ request.referrer }}" class="btn btn-primary m-2">Go Back</a>
+
       <a href="{{ url_for('userhome')}}" class="btn btn-primary m-2">Go Home</a>
       <a href="{{ url_for('all_mons')}}" class="btn btn-primary m-2"
         >See all Pokemon</a
